# dg-core

./: .env.example  .gitignore  README.md  alembic.ini  pyproject.toml
alembic/: env.py
alembic/versions/: 4882fd9ea424_add_active_patient_id_to_game_players.py  6263da934874_refactor_full_feature_set.py  8545f46a563d_add_password_hash_email_rename_display_.py  964d770c3a28_ghost_origin_tracking_and_archive_unlock.py  d1e9bfd6c0d1_initial_schema.py
app/: main.py
app/admin/: __init__.py  auth.py
app/admin/custom/: __init__.py  bulk_ops.py  cmyk_editor.py  dashboard.py
app/admin/views/: __init__.py  character.py  features.py  game.py  region.py  user.py
app/api/: admin.py  auth.py  bot.py  web.py
app/domain/: buff.py  character.py  communication.py  context.py  dispatcher.py  game.py  inventory.py  permissions.py  region.py  session.py  timeline.py  world.py
app/domain/rules/: combat.py  event_check.py  narration.py  skill.py
app/infra/: auth.py  cache.py  config.py  db.py  init_admin.py  ws_manager.py
app/models/: db_models.py  event.py  result.py
app/modules/dice/: parser.py  roller.py
app/modules/llm/: client.py  (+1 more)
docs/: 00_dg-engine实现规范.md  01_LLM实现规范.md  02_RAG实现规范.md  03_数据库实现规范.md  04_玩家信息格式.md  05_玩家交互方式.md  10_当前阶段实现目标.md  11_玩家手册-电子幽灵企划简易说明.md  README.md
scripts/: promote_admin.py
tests/: conftest.py  test_admin_dashboard.py  test_api.py  test_auth.py  test_buff.py  test_communication.py  test_dice.py  test_dice_parser.py  test_e2e.py  test_event_check.py  test_init_admin.py  test_inventory.py  test_session_enhanced.py  test_websocket.py
(+7 files in other folders)
